# mtapy

./: LLM.md  README.md  constants.py  demo.py  interfaces.py  macos_demo.py  models.py  protocol.py  pyproject.toml  receiver.py  sender.py
mtapy/: __init__.py  ble.py  crypto.py  transport.py
mtapy/drivers/: __init__.py  macos.py
src/mtapy/: __init__.py  ble.py  crypto.py  interfaces.py  transport.py  wifi_helper.py  wifi_p2p.py
src/mtapy/drivers/: __init__.py  bleak_driver.py  macos.py
tests/: __init__.py  test_crypto.py  test_models.py  test_protocol.py
